# kubetorch

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  kubetorch-0.4.1-py3-none-any.whl
python_client/: .gitignore  README.md  pyproject.toml  pytest.ini
python_client/kubetorch/: __init__.py  cli.py  cli_utils.py  config.py  constants.py  data_transfer.py  globals.py  logger.py  utils.py
python_client/kubetorch/data_store/: __init__.py  data_store_client.py  data_store_cmds.py  design.md  gpu_data_server.py  gpu_transfer.py  key_utils.py  metadata_client.py  pod_data_server.py  queue_client.py  rsync_client.py  types.py  websocket_tunnel.py
python_client/kubetorch/data_sync/: __init__.py  data_sync_client.py  data_sync_cmds.py  metadata_client.py  rsync_client.py  websocket_tunnel.py
python_client/kubetorch/distributed/: __init__.py  base.py  http_worker_pool.py  process_pool.py  spmd.py  utils.py
python_client/kubetorch/distributed/backends/: __init__.py  jax.py  monarch.py  pytorch.py  ray.py  tensorflow.py
python_client/kubetorch/docs/: Makefile  conf.py  index.rst  requirements.txt
python_client/kubetorch/docs/api/: cli.rst  python.rst
python_client/kubetorch/docs/api/python/: app.rst  cls.rst  compute.rst  config.rst  data_store.rst  fn.rst  image.rst  profiling.rst  secret.rst  volumes.rst  workload_configs.rst
python_client/kubetorch/monarch/: __init__.py  design.md  gateway.py  job.py  proxy.py
python_client/kubetorch/monitoring/: dashboard.py
python_client/kubetorch/provisioning/: __init__.py  autoscaling.py  base_service_manager.py  constants.py  deployment_service_manager.py  design.md  knative_service_manager.py  raycluster_service_manager.py  service_manager.py  trainjob_service_manager.py  utils.py
python_client/kubetorch/provisioning/templates/: kt_setup_template.sh.j2  pod_template.yaml  raycluster_template.yaml  service_template.yaml  workerset_template.yaml
python_client/kubetorch/resources/callables/: module.py  utils.py
python_client/kubetorch/resources/callables/cls/: cls.py
python_client/kubetorch/resources/callables/fn/: fn.py
python_client/kubetorch/resources/compute/: app.py  compute.py  decorators.py  endpoint.py  rbac.py  utils.py  websocket.py
python_client/kubetorch/resources/images/: __init__.py  image.py  images.py
python_client/kubetorch/resources/secrets/: __init__.py  kubernetes_secrets_client.py  secret.py  secret_factory.py  utils.py
python_client/kubetorch/resources/secrets/provider_secrets/: anthropic_secret.py  aws_secret.py  azure_secret.py  cohere_secret.py  gcp_secret.py  github_secret.py  huggingface_secret.py  kubeconfig_secret.py  lambda_secret.py  langchain_secret.py  openai_secret.py  pinecone_secret.py  providers.py  ssh_secret.py  wandb_secret.py
python_client/kubetorch/resources/volumes/: volume.py
python_client/kubetorch/servers/http/: constants.py  distributed_utils.py  http_client.py  http_server.py  log_capture.py  metrics_client.py  metrics_push.py  pdb_websocket.py  profiling.py  server_metrics.py  utils.py
python_client/kubetorch/serving/: __init__.py  autoscaling.py  base_service_manager.py  constants.py  custom_service_manager.py  deployment_service_manager.py  design.md  distributed_supervisor.py  distributed_utils.py  execution_supervisor.py  global_http_clients.py  http_client.py  http_server.py  knative_service_manager.py  load_balanced_supervisor.py  log_capture.py  metrics_push.py  monarch_supervisor.py  pdb_websocket.py  process_pool.py  process_worker.py  profiling.py  ray_supervisor.py  raycluster_service_manager.py  remote_worker_pool.py  server_metrics.py  service_manager.py  supervisor_factory.py  trainjob_service_manager.py  trainjob_v2_service_manager.py  utils.py
python_client/kubetorch/serving/spmd/: jax_process.py  pytorch_process.py  spmd_supervisor.py  tensorflow_process.py
python_client/kubetorch/serving/templates/: deployment_template.yaml  knative_service_template.yaml  kt_setup_template.sh.j2  pod_template.yaml  raycluster_service_template.yaml  raycluster_template.yaml  service_template.yaml  workerset_template.yaml
python_client/tests/: conftest.py  test_app.py  test_autodown.py  test_autoscale.py  test_byo_compute.py  test_byo_manifest.py  test_cli.py  test_compute.py  test_config.py  test_controller.py  test_declarative.py  test_deployment_fixtures.py  test_distributed.py  test_gpu.py  test_gpu_store.py  test_http_server.py  test_imperative.py  test_kueue.py  test_monarch.py  test_monitoring.py  test_pod_from_pod.py  test_profiling.py  test_python_path.py  test_queueing.py  test_rbac.py  test_secret.py  test_store.py  utils.py
python_client/tests/assets/app/: summer_app.py
python_client/tests/assets/apply/: Dockerfile  manifest.yaml  pod_manifest.yaml  run.py  test_data.txt
python_client/tests/assets/async_summer/: async_summer.py  inputs.yaml  metadata.dockerfile
python_client/tests/assets/complex_logging/: __init__.py  logging_config.py  worker_functions.py
python_client/tests/assets/conda_env/: Dockerfile
python_client/tests/assets/decorated_modules/: decorated_modules.py
python_client/tests/assets/kv_store/: gpu_helper.py  store_helper.py
python_client/tests/assets/number/: inputs.yaml  metadata.dockerfile  number.py
python_client/tests/assets/python_executable/: Dockerfile
python_client/tests/assets/ray_actors/: ray_distributed_class.py
python_client/tests/assets/ray_tune/: ray_tune_hpo.py
python_client/tests/assets/rsync_testing/: __init__.py  rsync_verifier.py
python_client/tests/assets/rsync_testing/test_files/: home_test.txt  (+1 more)
python_client/tests/assets/summer/: inputs.yaml  metadata.dockerfile  summer.py
python_client/tests/assets/test_distributed/: distributed_test_class.py  distributed_test_functions.py
python_client/tests/assets/torch_ddp/: inputs.yaml  metadata.dockerfile  torch_ddp.py
python_client/tests/assets/torch_summer/: inputs.yaml  metadata.dockerfile  torch_summer.py
python_client/tests/assets/undecorated_modules/: undecorated_modules.py
(+189 files in other folders)
